fix strange spacing errors with section headers

--- a/css/styles.css
+++ b/css/styles.css
@@ -87,8 +87,8 @@ padding-bottom: 20px;
 }
 .About-me {
   padding-bottom: 3%;
-  padding-right: 9%;
-  padding-left: 5%;
+  padding-right: 3%;
+  padding-left: 3%;
   font-size: medium;
 }
 .About-me ul {
